--- a/app/src/main/res/layout/activity_editpassword.xml
+++ b/app/src/main/res/layout/activity_editpassword.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     tools:context="com.example.hardeep.myproject.user.editpassword">
 
     <TextView
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Enter the old password"
         android:textColor="@android:color/white"
         android:textSize="20dp"
@@ -25,7 +24,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/oldpass"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Enter the new password"
         android:textColor="@android:color/white"
         android:textSize="20dp"
@@ -37,7 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/newpass"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Re-enter the new password"
         android:textColor="@android:color/white"
         android:textSize="20dp"
@@ -49,7 +46,7 @@
         android:layout_height="50dp"
         android:layout_below="@+id/t3"
         android:layout_marginTop="10dp"
-        android:background="@drawable/edittextview"
+        android:background="@drawable/editt"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:textColor="@android:color/black" />
@@ -60,7 +57,7 @@
         android:layout_height="50dp"
         android:layout_below="@+id/t4"
         android:layout_marginTop="10dp"
-        android:background="@drawable/edittextview"
+        android:background="@drawable/editt"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:textColor="@android:color/black" />
@@ -71,7 +68,7 @@
         android:layout_height="50dp"
         android:layout_below="@+id/t5"
         android:layout_marginTop="10dp"
-        android:background="@drawable/edittextview"
+        android:background="@drawable/editt"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:textColor="@android:color/black" />
@@ -85,7 +82,6 @@
         android:layout_marginTop="70dp"
         android:background="@drawable/buttonview"
         android:text="Change Password"
-        android:fontFamily="@font/berkshire_swash"
         android:textColor="@android:color/white" />
 
 
