--- a/app/src/main/res/drawable/edittextview.xml
+++ b/app/src/main/res/drawable/edittextview.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="#FFFFFF" />
     <corners android:radius="30dp" />
-    <stroke android:color="@color/colorPrimary"
-        android:width="0.5dp"/>
 
 </shape>
