--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     android:padding="15dp"
     tools:context="com.example.hardeep.myproject.user.editprofile">
 
@@ -14,7 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Name"
         android:textColor="@android:color/white"
         android:textSize="25dp"
@@ -26,7 +25,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/name1"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Username"
         android:textColor="@android:color/white"
         android:textSize="25dp"
@@ -38,7 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/username1"
         android:layout_marginTop="15dp"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Email"
         android:textColor="@android:color/white"
         android:textSize="25dp"
@@ -49,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/textView3"
-        android:background="@drawable/edittextview"
+        android:background="@drawable/editt"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
         android:textColor="@android:color/black" />
@@ -59,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/t1"
-        android:background="@drawable/edittextview"
+        android:background="@drawable/editt"
         android:paddingLeft="10dp"
         android:textColor="@android:color/black" />
 
@@ -85,7 +82,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
         android:background="@drawable/buttonview"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Update Details"
         android:textColor="@android:color/white"
         android:textSize="18dp" />
@@ -111,7 +107,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/image1"
-        android:fontFamily="@font/berkshire_swash"
         android:text="Edit profile picture"
         android:textColor="#FFFFFF" />
 </RelativeLayout>
