--- a/app/src/main/res/layout/activity_myorders.xml
+++ b/app/src/main/res/layout/activity_myorders.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     android:layout_height="match_parent"
     tools:context="com.example.hardeep.myproject.user.myorders">
 
