--- a/app/src/main/res/layout/activity_newaccount.xml
+++ b/app/src/main/res/layout/activity_newaccount.xml
@@ -4,23 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     tools:context="com.example.hardeep.myproject.newaccount">
 
     <RelativeLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/bckbutton"
+            android:id="@+id/bckbutton"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create A New Account"
+            android:layout_centerHorizontal="true"
+            android:textColor="#FFFFFF"
+            android:textSize="25dp"
+            android:id="@+id/head"
+            android:layout_marginTop="10dp"
+            android:textStyle="bold"
+            />
 
         <ImageButton
             android:id="@+id/image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/head"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
             android:backgroundTint="#FFFFFF"
             android:clickable="true"
+            android:layout_marginTop="30dp"
             android:onClick="Choose_image"
             android:scaleType="centerCrop"
             android:src="@mipmap/profilepic"
@@ -32,9 +53,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/image"
             android:layout_centerHorizontal="true"
-            android:fontFamily="@font/berkshire_swash"
             android:text="@string/select_profile_picture"
             android:textColor="#FFFFFF"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -43,8 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/berkshire_swash"
+            android:layout_marginTop="20dp"
             android:text="@string/enter_full_name"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
@@ -57,7 +77,7 @@
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/edittextview"
+            android:background="@drawable/editt"
             android:inputType="textPersonName"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -71,7 +91,6 @@
             android:layout_below="@+id/name"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="@string/set_username"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
@@ -84,7 +103,7 @@
             android:layout_below="@+id/usernametext"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/edittextview"
+            android:background="@drawable/editt"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:singleLine="true"
@@ -97,7 +116,6 @@
             android:layout_below="@+id/username"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="Set Email"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
@@ -110,7 +128,7 @@
             android:layout_below="@+id/emailtext"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/edittextview"
+            android:background="@drawable/editt"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:maxLines="1"
@@ -125,7 +143,6 @@
             android:layout_below="@+id/email"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="@string/set_password"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
@@ -139,7 +156,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/edittextview"
+            android:background="@drawable/editt"
             android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -153,7 +170,6 @@
             android:layout_below="@+id/password"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="@string/re_enter_password"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
@@ -166,7 +182,7 @@
             android:layout_below="@+id/passwordtext"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/edittextview"
+            android:background="@drawable/editt"
             android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -182,7 +198,6 @@
             android:layout_marginTop="50dp"
             android:layout_marginBottom="20sp"
             android:background="@drawable/buttonview"
-            android:fontFamily="@font/berkshire_swash"
             android:text="@string/create_account"
             android:textColor="@android:color/white"
             android:textSize="18sp"
