--- a/app/src/main/res/layout/fragment_completed_orders.xml
+++ b/app/src/main/res/layout/fragment_completed_orders.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     tools:context=".CompletedOrders">
 
  <TextView
