--- a/app/src/main/res/layout/fragment_price_list.xml
+++ b/app/src/main/res/layout/fragment_price_list.xml
@@ -17,7 +17,6 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="Price List"
-            android:fontFamily="@font/berkshire_swash"
             android:textColor="#000000"
             android:textStyle="bold"
             android:textSize="30dp" />
@@ -28,7 +27,6 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="70dp"
             android:text="Cloth Type"
-            android:fontFamily="@font/berkshire_swash"
             android:textStyle="bold"
             android:textColor="#000000"
             android:textSize="20dp" />
@@ -41,7 +39,6 @@
             android:gravity="center_horizontal"
             android:text="Price per item"
             android:textColor="#000000"
-            android:fontFamily="@font/berkshire_swash"
             android:textStyle="bold"
             android:textSize="20dp" />
 
@@ -49,14 +46,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="130dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="1.Shirts/T-Shirts/Kurtas"
             android:textSize="15dp" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"            android:fontFamily="@font/berkshire_swash"
-
+            android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
             android:layout_marginTop="130dp"
             android:text="Rs.5"
@@ -66,7 +61,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="170dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="2.Pent/Jeans/Dhoti/Lungi"
             android:textSize="15dp" />
 
@@ -74,7 +68,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="170dp"
             android:text="Rs.7"
             android:textSize="15dp" />
@@ -82,7 +75,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="210dp"
             android:text="3.Bed Sheet"
             android:textSize="15dp" />
@@ -91,7 +83,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="210dp"
             android:text="Rs.10"
             android:textSize="15dp" />
@@ -100,7 +91,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="4.Saree"
             android:textSize="15dp" />
 
@@ -109,7 +99,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="250dp"
             android:text="Rs.20"
             android:textSize="15dp" />
@@ -117,7 +106,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="290dp"
             android:text="5.Coat or Blazer(Dry Clean)"
             android:textSize="15dp" />
@@ -126,7 +114,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="290dp"
             android:text="Rs.50"
             android:textSize="15dp" />
@@ -135,7 +122,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="330dp"
-            android:fontFamily="@font/berkshire_swash"
             android:text="6.Blanket"
             android:textSize="15dp" />
 
@@ -143,7 +129,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="330dp"
             android:text="Rs.200"
             android:textSize="15dp" />
@@ -151,7 +136,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="370dp"
             android:text="6.Socks(Pair)/Handkerchief"
             android:textSize="15dp" />
@@ -159,7 +143,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginLeft="250dp"
             android:layout_marginTop="370dp"
             android:text="Rs.2"
@@ -168,7 +151,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="410dp"
             android:textSize="15dp"
             android:text="7.Sweater/Hoodies/SweatShirts" />
@@ -177,7 +159,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="410dp"
             android:text="Rs.10"
             android:textSize="15dp" />
@@ -186,7 +167,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="450dp"
-            android:fontFamily="@font/berkshire_swash"
             android:textSize="15dp"
             android:text="8.Ladies Suit" />
 
@@ -194,7 +174,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="450dp"
             android:text="Rs.10"
             android:textSize="15dp" />
@@ -203,7 +182,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="490dp"
-            android:fontFamily="@font/berkshire_swash"
             android:textSize="15dp"
             android:text="9.Under garments(Any)" />
 
@@ -211,7 +189,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
-            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="490dp"
             android:text="Rs.3"
             android:textSize="15dp" />
