--- a/app/src/main/res/layout/fragment_rejected_orders.xml
+++ b/app/src/main/res/layout/fragment_rejected_orders.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/backk"
+    android:background="@drawable/bbck"
     android:layout_height="match_parent"
     tools:context=".RejectedOrders">
 
