--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#974BE8</color>
+    <color name="colorPrimary">#974BE8</color>z
     <color name="colorPrimaryDark">#00ccff</color>
     <color name="colorAccent">#e0e0e0</color>
 
